be/src/exec/hdfs-parquet-scanner.cc
@@ -46,6 +46,15 @@ using namespace boost::algorithm;
 using namespace impala;
 using namespace strings;
 
+// Max data page header size in bytes. This is an estimate and only needs to be an upper
+// bound. It is theoretically possible to have a page header of any size due to string
+// value statistics, but in practice we'll have trouble reading string values this large.
+const int MAX_PAGE_HEADER_SIZE = 8 * 1024 * 1024;
+
+// Max dictionary page header size in bytes. This is an estimate and only needs to be an
+// upper bound.
+const int MAX_DICT_HEADER_SIZE = 100;
+
 Status HdfsParquetScanner::IssueInitialRanges(HdfsScanNode* scan_node,
     const std::vector<HdfsFileDesc*>& files) {
   vector<DiskIoMgr::ScanRange*> footer_ranges;
@@ -497,7 +506,6 @@ static bool RequiresSkippedDictionaryHeaderCheck(
 Status HdfsParquetScanner::BaseColumnReader::ReadDataPage() {
   Status status;
   uint8_t* buffer;
-  int num_bytes;
 
   // We're about to move to the next data page.  The previous data page is
   // now complete, pass along the memory allocated for it.
@@ -516,8 +524,7 @@ Status HdfsParquetScanner::BaseColumnReader::ReadDataPage() {
 
     int64_t buffer_size;
     RETURN_IF_ERROR(stream_->GetBuffer(true, &buffer, &buffer_size));
-    num_bytes = min(buffer_size, static_cast<int64_t>(MAX_PAGE_HEADER_SIZE));
-    if (num_bytes == 0) {
+    if (buffer_size == 0) {
       DCHECK(stream_->eosr());
       stringstream ss;
       ss << "Column metadata states there are " << metadata_->num_values
@@ -527,41 +534,54 @@ Status HdfsParquetScanner::BaseColumnReader::ReadDataPage() {
         return Status(ss.str());
       } else {
         parent_->scan_node_->runtime_state()->LogError(ss.str());
+        return Status::OK;
       }
     }
 
     // We don't know the actual header size until the thrift object is deserialized.
-    uint32_t header_size = num_bytes;
-    status = DeserializeThriftMsg(
-        buffer, &header_size, true, &current_page_header_, true);
-    if (!status.ok()) {
-      if (header_size >= MAX_PAGE_HEADER_SIZE) {
-        status.AddErrorMsg("ParquetScanner: Could not deserialize page header.");
+    // Loop until we successfully deserialize the header or exceed the maximum header size.
+    uint32_t header_size;
+    while (true) {
+      header_size = buffer_size;
+      status = DeserializeThriftMsg(
+          buffer, &header_size, true, &current_page_header_, true);
+      if (status.ok()) break;
+
+      if (buffer_size >= MAX_PAGE_HEADER_SIZE) {
+        stringstream ss;
+        ss << "ParquetScanner: could not read data page because page header exceeded "
+           << "maximum size of "
+           << PrettyPrinter::Print(MAX_PAGE_HEADER_SIZE, TCounterType::BYTES);
+        status.AddErrorMsg(ss.str());
         return status;
       }
-      // Stitch the header bytes that are split across buffers.
-      uint8_t header_buffer[MAX_PAGE_HEADER_SIZE];
-      int32_t header_first_part = header_size;
-      memcpy(header_buffer, buffer, header_first_part);
 
-      if (!stream_->SkipBytes(header_first_part, &status)) return status;
-      RETURN_IF_ERROR(stream_->GetBuffer(true, &buffer, &buffer_size));
-      num_bytes = min(buffer_size, static_cast<int64_t>(MAX_PAGE_HEADER_SIZE));
-      if (num_bytes == 0) return status;
-      uint32_t header_second_part = ::min(num_bytes,
-                                          MAX_PAGE_HEADER_SIZE - header_first_part);
-      memcpy(header_buffer + header_first_part, buffer, header_second_part);
-      header_size = MAX_PAGE_HEADER_SIZE;
-      status =
-          DeserializeThriftMsg(header_buffer, &header_size, true, &current_page_header_);
-
-      if (!status.ok()) {
-        status.AddErrorMsg("ParquetScanner: Could not deserialize page header");
+      // Didn't read entire header, increase buffer size and try again
+      Status status;
+      int64_t new_buffer_size = max(buffer_size * 2, 1024L);
+      bool success = stream_->GetBytes(
+          new_buffer_size, &buffer, &new_buffer_size, &status, /* peek */ true);
+      if (!success) {
+        DCHECK(!status.ok());
         return status;
       }
-      DCHECK_GT(header_size, header_first_part);
-      header_size = header_size - header_first_part;
+      DCHECK(status.ok());
+
+      if (buffer_size == new_buffer_size) {
+        DCHECK(new_buffer_size != 0);
+        string msg = "ParquetScanner: reached EOF while deserializing data page header.";
+        if (parent_->scan_node_->runtime_state()->abort_on_error()) {
+          return Status(msg);
+        } else {
+          parent_->scan_node_->runtime_state()->LogError(msg);
+          return Status::OK;
+        }
+      }
+      DCHECK_GT(new_buffer_size, buffer_size);
+      buffer_size = new_buffer_size;
     }
+
+    // Successfully deserialized current_page_header_
     if (!stream_->SkipBytes(header_size, &status)) return status;
 
     int data_size = current_page_header_.compressed_page_size;
@@ -1071,7 +1091,7 @@ Status HdfsParquetScanner::InitColumns(int row_group_idx) {
       // The Parquet MR writer had a bug in 1.2.8 and below where it didn't include the
       // dictionary page header size in total_compressed_size and total_uncompressed_size
       // (see IMPALA-694). We pad col_len to compensate.
-      col_len += MAX_PAGE_HEADER_SIZE;
+      col_len += MAX_DICT_HEADER_SIZE;
     }
 
     // TODO: this will need to change when we have co-located files and the columns
